ajout cryptage/decryptage Perso

--- a/Jouniaux_Cryptographie/Jouniaux_Cryptographie.csproj
+++ b/Jouniaux_Cryptographie/Jouniaux_Cryptographie.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CryptageDotNet.cs" />
+    <Compile Include="CryptagePerso.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
